# opencode-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/opencode_proxy/: __init__.py  __main__.py  app.py  compat.py  proxy.py  settings.py
tests/: conftest.py  test_app.py  test_compat.py  test_proxy.py  test_settings.py
tests/fixtures/tool_calls/: deepseek_dsml.txt  qwen_json.txt  qwen_xml.txt  reasoning_content.sse
